<resources>
    <string name="app_name">CF Companion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="problem_tags">
        <item>math</item>
        <item>greedy</item>
        <item>implementation</item>
        <item>brute force</item>
        <item>constructive algorithms</item>
        <item>strings</item>
        <item>sortings</item>
        <item>number theory</item>
        <item>binary search</item>
        <item>games</item>
        <item>dp</item>
        <item>two pointers</item>
        <item>data structures</item>
        <item>combinatorics</item>
        <item>geometry</item>
        <item>ternary search</item>
        <item>*special</item>
        <item>bitmasks</item>
        <item>dfs and similar</item>
        <item>graph matchings</item>
        <item>graphs</item>
    </string-array>
    <string name="cd_user_avatar">Profile Photo</string>
    <string name="Kishan_Garhwal">Kishan Garhwal</string>
    <string name="ID">Kishan_455</string>
    <string name="Title">Pupil</string>
    <string name="Rating">3000</string>
    <string name="widget_not_logged_in">Not logged in</string>
    <string name="widget_loading">Loading…</string>
    <string name="widget_error">Failed to load</string>
    <string name="widget_unrated">Unrated</string>
    <string name="widget_tap_to_login">Tap to sign in</string>
    <string name="widget_rating_label">RATING</string>
    <string name="widget_max_rating_label">MAX RATING</string>
    <string name="widget_app_name">CF Profile</string>
    <string name="widget_refresh_desc">Refresh widget</string>
    <string name="widget_description">View your Codeforces profile at a glance</string>
    <string name="todays_submission_label">TODAY\'S SUBMISSION</string>
</resources>
